# rag-mcp

./: README.md  TECHNICAL_README.md  prism_client_integration.py  pyproject.toml  requirements.txt  setup.py
case-study/: CASE_STUDY_TRADE_CO-PILOT.md
src/: __init__.py
src/core/: __init__.py  embeddings.py  retriever.py  tool_index.py
src/enhancers/: __init__.py  context_analyzer.py  query_enhancer.py  trading_patterns.py
src/models/: __init__.py  query_context.py  tool_spec.py
src/specialized/: __init__.py  trading_agent.py
src/storage/: __init__.py  base_store.py  file_store.py  memory_store.py  redis_store.py
tests/: __init__.py  prism_tool_specs.json  test_client_integration.py
